# arbsim-home-assignment

./: .gitignore  ArbSim.sln  ArbSim.slnx  ArbSim.vcxproj  ArbSimTests.vcxproj  CMakeLists.txt  README.md  README.md.txt  config.cfg  package.ps1  package_release.ps1  prints.txt  project_plan.txt.txt  project_tree.txt
App/: App.vcxproj  App.vcxproj.filters  Main.cpp  config.cfg  config.cpp  config.h
ArbSimCore/: ArbSimCore.cpp  ArbSimCore.vcxproj  ArbSimCore.vcxproj.filters  CSVReader.h  CsvReader.cpp  MarketData.h  PnlTracker.cpp  SimulationEngine.cpp  SimulationEngine.h  Strategy.cpp  Strategy.h  StreamMerger.cpp  StreamMerger.h
Tests/: BasicTests.cpp  PnlTrackerTest.cpp  Tests.vcxproj
config/: config.cfg
data/: README.md
src/app/: Main.cpp
src/config/: Config.cpp  Config.h
src/core/: Constants.h  CsvReader.cpp  CsvReader.h  Istrategy.h  PnlTracker.cpp  PnlTracker.h  SimulationEngine.cpp  SimulationEngine.h  Strategy.cpp  Strategy.h  StrategyParams.h  StreamMerger.cpp  StreamMerger.h
tools/: package_release.ps1  server.py
web-ui/: server.py
web-ui/templates/: index.html
web/templates/: index.html
